--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.6",
-    "@angular/cli": "11.0.6",
+    "@angular/cli": "^11.2.0",
     "@angular/compiler-cli": "11.0.6",
     "@angular/language-service": "11.0.6",
     "@types/bootstrap": "4.5.0",
